attempt to pull 4 other datasets from who, WIP

--- a/WHO Data API/PROJECT_1_Caite.ipynb
+++ b/WHO Data API/PROJECT_1_Caite.ipynb
@@ -20,9 +20,21 @@
    "execution_count": 2,
    "id": "0886bd95-1b8c-4099-bd73-7de8e4548a7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1165226318.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    ur12= https://ghoapi.azureedge.net/api/SA_0000001398\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "url= \"https://ghoapi.azureedge.net/api/SA_0000001476\""
+    "url= \"https://ghoapi.azureedge.net/api/SA_0000001476\"\n",
+    "ur12= \"https://ghoapi.azureedge.net/api/SA_0000001398\"\n",
+    "url3= \"https://ghoapi.azureedge.net/api/SA_0000001732\"\n",
+    "url4= \"https://ghoapi.azureedge.net/api/SA_0000001523\"\n"
    ]
   },
   {
@@ -624,12 +636,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb7314b0-b586-44c2-94f7-2cfc6061461a",
+   "cell_type": "markdown",
+   "id": "2886fc64-efed-48c7-96ea-fb1dcd569845",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# SMU_BootCamp_-Project_1\n",
+    "\n",
+    "\"Bar\" Graphs -- Global Alcohol Consumption \n",
+    "\n",
+    "# Proposal:\n",
+    "\n",
+    "# Goals\n",
+    "- Are income, life expectancy,  and alcohol consumption correlated?\n",
+    "- What are the demographics of consumers who purchase alcohol?\n",
+    "- How are these demographics changing over time?\n",
+    "- How do consumer preferences vary across different demographics? (age, gender, income, etc.)\n",
+    "- How does this relate to household income and the price of alcohol?\n",
+    "\n",
+    "\n",
+    "# At least 2x visualizations per person:\n",
+    "- Caite and Kelley - maps and heat maps\n",
+    "- Nigel- Bar\n",
+    "- Line- Jeffrey\n",
+    "- Scatter- Josh\n",
+    "\n",
+    "\n",
+    "# Resources\n",
+    "- https://genderdata.worldbank.org/en/indicator/sh-alc-pcap-li\n",
+    "- https://www.who.int/data/gho/info/gho-odata-api\n",
+    "- \"drinks.csv\" https://gist.github.com/aegorenkov/f7f0f8d6e9cc17ca9774572e224e2ad1"
+   ]
   }
  ],
  "metadata": {
