percap_household added

--- a/WHO Data API/PROJECT_1_Caitev3.ipynb
+++ b/WHO Data API/PROJECT_1_Caitev3.ipynb
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "17e610f9-d804-4484-ae79-f22da513e14c",
    "metadata": {},
    "outputs": [
@@ -2323,7 +2323,8 @@
     "percap_household_exp = pd.merge(df_0, df_8, on=['TimeDimensionValue', 'SpatialDim'], how='inner')\n",
     "\n",
     "# Display the resulting merged dataframe\n",
-    "display(percap_household_exp)"
+    "display(percap_household_exp)\n",
+    "percap_household_exp.to_csv(\"percap_household_exp.csv\", index=False)"
    ]
   },
   {
