added an example slide-deck and a scratchpad for BLS and for stats related to what country based on time dimension

--- a/WHO Data API/PROJECT_1_Caitev3.ipynb
+++ b/WHO Data API/PROJECT_1_Caitev3.ipynb
@@ -1818,8 +1818,8 @@
     }
    ],
    "source": [
-    "#clean and transfor df_0 Per Houshold % expenditure  consumption\n",
-    "#this was at issue because of timedimensionvalue-- had to map as timedim and had to map Lpercapita as a numeric value\n",
+    "\n",
+    "#this was at issue because of timedimensionvalue-- had to map as timedim and had to map value as a numeric value\n",
     "df_5clean = df_5[['SpatialDim', \n",
     "                  'ParentLocationCode', \n",
     "                  'TimeDim', 'Dim1', \n",
